<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditsFragment">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="408dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-black"
        android:text="Credits"
        android:textAlignment="center"
        android:textColor="#040303"
        android:textSize="@dimen/appsTitle"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="294dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/author_name"
        android:textAlignment="center"
        android:textColor="#040404"
        android:textSize="@dimen/house_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="294dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:fontFamily="serif"
        android:text="@string/instructor_name"
        android:textAlignment="center"
        android:textColor="#040404"
        android:textSize="@dimen/house_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="294dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/pictures_title"
        android:textAlignment="center"
        android:textColor="#040404"
        android:textSize="@dimen/jobTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="294dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/pictures_source1"
        android:textAlignment="center"
        android:textColor="#040404"
        android:textSize="@dimen/house_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="294dp"
        android:layout_height="42dp"
        android:fontFamily="serif"
        android:text="@string/pictures_source2"
        android:textAlignment="center"
        android:textColor="#040404"
        android:textSize="@dimen/house_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="294dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/softwares_title"
        android:textAlignment="center"
        android:textColor="#040404"
        android:textSize="@dimen/jobTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="294dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/software1"
        android:textAlignment="center"
        android:textColor="#040404"
        android:textSize="@dimen/house_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="294dp"
        android:layout_height="42dp"
        android:fontFamily="serif"
        android:text="@string/software2"
        android:textAlignment="center"
        android:textColor="#040404"
        android:textSize="@dimen/house_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="294dp"
        android:layout_height="42dp"
        android:fontFamily="serif"
        android:text="@string/software3"
        android:textAlignment="center"
        android:textColor="#040404"
        android:textSize="@dimen/house_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

</androidx.constraintlayout.widget.ConstraintLayout>